k8s/tarefas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tarefas
  namespace: default
  labels:
    app: tarefas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tarefas
  template:
    metadata:
      labels:
        app: tarefas
    spec:
      containers:
        - name: tarefas
          image: tarefas:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: tarefas
  namespace: default
spec:
  selector:
    app: tarefas
  ports:
    - port: 80
      targetPort: 8080
